--- a/financialy-page/index.html
+++ b/financialy-page/index.html
@@ -18,7 +18,7 @@
   <!--Navbar-->
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#"><img src="Financially 1.png" alt="Logo" width="70" height="70"> Gerenciador de Contas Bancárias</a>
+      <a class="navbar-brand" href="#"><img src="Financially 1.png" alt="Logo" width="70" height="70"> Financialy </a>
 
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -29,76 +29,20 @@
             <a class="nav-link active" aria-current="page" href="#">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Corrente</a>
+            <a class="nav-link" href="#">Benefícios</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Poupança</a>
+            <a class="nav-link" href="#">Planos</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Universitária</a>
+            <a class="nav-link" href="#">Contato</a>
           </li>
         </ul>
       </div>
     </div>
   </nav>
 
-  <!--Grid section-->
   
-    <div class="container">
-      <div class="row">
-        <!--Col 1-->
-        <div class="col">
-          <br>
-          <h2>Inserir nova conta</h2>
-          <br>
-           <!-- Placeholders-->
-          <div>
-            <input type="number" class="form-control" id="numero" placeholder="Número">
-          </div>
-          <br>
-          <div>
-            <input type="number" class="form-control" id="agencia" placeholder="Agência">
-          </div>
-          <br>
-          <div>
-            <input type="number" class="form-control" id="saldo" placeholder="Saldo">
-          </div>
-          <br>
-
-          <!--Dropdown-->
-          <select class="form-select" id="tipo" aria-label="Default select example">
-            <option selected value="Conta Corrente">Conta Corrente</option>
-            <option value="Conta Poupança">Conta Poupança</option>
-            <option value="Conta Universitária">Conta Universitária</option>
-          </select>
-          <br>
-           <!--Button-->
-          <button type="button" class="btn btn-outline-secondary" onclick="inserirConta()">Inserir</button>
-        </div>
-
-        <!--Col 2-->
-        <div class="col">
-          <br>
-          <h2>Contas cadastradas</h2>
-          <ul id="listacontas"></ul>
-          <!--Button-->
-          <button type="button" class="btn btn-outline-secondary" onclick="visualizarContas()">Visualizar Contas</button>
-
-          <br>
-          <br>
-          <h2>Deletar contas</h2>
-          <!-- Placeholder-->
-          <div>
-            <input type="number" class="form-control" id="contaDeleta" placeholder="Número">
-          </div>
-          <br>
-          <!--Button-->
-          <button type="button" class="btn btn-outline-secondary" onclick="deletarContas()">Deletar Contas</button>
-          <br>
-        </div>
-      </div>
-      <br>
-    </div>
 
     <!--Footer-->
     <footer class="jumbotron mt-9 text-center" style="background-color: #D3D3D3;">
